# mlops_project

./: .dockerignore  .gitignore  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
app/: main.py
data/processed/: test_processed.csv  train_processed.csv
src/: __init__.py
src/model_evaluation/: evaluate_model.py
src/model_training/: train_model.py
